Refactor Market
