# docs/openapi.yaml
@@ -11,7 +11,7 @@ servers:
 paths:
   /rates/v1:
     get:
-      operationId: get-rates-v1
+      operationId: rates-v1
       tags:
         - currency
       summary: Currency Conversion Rates
@@ -35,116 +35,58 @@ paths:
 
   /dlcinfo/v2:
     get:
-      operationId: get-v2-dlcinfo
+      operationId: dlcinfo-v2
       tags:
         - game
       summary: DLC Info
       security: []
       parameters:
-        - $ref: '#/components/parameters/AppId'
+        - $ref: "#/components/parameters/AppId"
       responses:
         200:
           $ref: "./defs/dlcinfo.v2.200.yaml"
         default:
-          $ref: './defs/default-error.yaml'
+          $ref: "./defs/default-error.yaml"
 
-  /v2/market/cards/:
+  /market/cards/v2:
     get:
-      parameters:
-        - $ref: '#/components/parameters/Currency'
-        - $ref: '#/components/parameters/AppId'
-      responses:
-        '200':
-          description: Success
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  result:
-                    $ref: '#/components/schemas/SuccessResult'
-                  data:
-                    type: object
-                    propertyNames:
-                      type: string
-                    additionalProperties:
-                      type: object
-                      properties:
-                        img:
-                          type: string
-                        url:
-                          type: string
-                        price:
-                          type: number
-              examples:
-                successResponse:
-                  value:
-                    result: success
-                    data:
-                      Alyx Vance:
-                        img: IzMF03bk9WpSBq-S-ekoE33L-iLqGFHVaU25ZzQNQcXdA3g5gMEPvUZZEfSMJ6dESN8p_2SVTY7V2NsNxGVIwXpaL3_Z0W11LtNtNsjDhgz2oOWIQXDzMG-WKXeNHVs5HLBXNG6IqDCitO6TSjGbEukkQAoCfKMH-mFBaJyXf0xqwtVUuWG9hXt0Excvd5gXJFfjzndKN74gkHAUcchSynbwIMaPjQplahRtWbCxX72TOdPxmXwlQ1o5SLZcaYl9HTjTpg
-                        url: 220-Alyx%20Vance
-                        price: 0.09
-                      Alyx Vance (Foil):
-                        img: IzMF03bk9WpSBq-S-ekoE33L-iLqGFHVaU25ZzQNQcXdA3g5gMEPvUZZEfSMJ6dESN8p_2SVTY7V2NsNxGVIwXpaL3_Z0W11LtNtNsjDhgz2oOWIQXDzMG-WKXeNHVs5HLBXNG6IqDCitO6TSjGbEukkQAoCfKMH-mFBaJyXf0xqwtVUuWG9hXt0Excvd5gWKF-6kiwXab8kkHZAJpMGnCT3I5eIgllgbEI8XurmVryUa4P3wS11Q1o5SLZcaYlIj14tyA
-                        url: 220-Alyx%20Vance%20%28Foil%29
-                        price: 0.82
-        default:
-          $ref: '#/components/schemas/ErrorResponse'
-      summary: Cards
+      operationId: market-cards-v2
       tags:
         - market
-    parameters: []
-  /v2/market/cards/average-prices/:
-    get:
+      summary: Cards
+      security: []
       parameters:
-        - $ref: '#/components/parameters/Currency'
+        - $ref: "#/components/parameters/Currency"
+        - $ref: "#/components/parameters/AppId"
+      responses:
+        200:
+          $ref: "./defs/market.cards.v2.200.yaml"
+        default:
+          $ref: "./defs/default-error.yaml"
+
+  /market/cards/average-prices/v2:
+    get:
+      operationId: market-cards-averageprices-v2
+      tags:
+        - market
+      summary: Average Card Prices
+      security: []
+      parameters:
+        - $ref: "#/components/parameters/Currency"
         - name: appids
           in: query
           required: true
-          style: array
+          style: simple
           schema:
             type: array
             items:
               type: integer
       responses:
-        '200':
-          description: Success
-          content:
-            application/json:
-              type: object
-              properties:
-                result:
-                  $ref: '#/components/schemas/SuccessResult'
-                data:
-                  type: object
-                  propertyNames:
-                    pattern: ^\d+$
-                  additionalProperties:
-                    type: object
-                    properties:
-                      regular:
-                        type: number
-                      foil:
-                        type: number
-              examples:
-                successResponse:
-                  value:
-                    result: success
-                    data:
-                      '220':
-                        regular: 0.087143
-                        foil: 0.707143
-                      '440':
-                        foil: 0.905714
-                        regular: 0.051429
+        200:
+          $ref: "./defs/market.cards.average-prices.v2.200.yaml"
         default:
-          $ref: '#/components/schemas/ErrorResponse'
-      operationId: get-v2-market-averagecardprices
-      summary: Average Card Prices
-      tags:
-        - market
-    parameters: []
+          $ref: "./defs/default-error.yaml"
+
   /v2/profile/{steamId}/:
     get:
       summary: Profile Info
