# src/Model/Market/ERarity.php
@@ -1,0 +1,10 @@
+<?php
+namespace AugmentedSteam\Server\Model\Market;
+
+enum ERarity: string
+{
+    case Normal = "normal";
+    case Uncommon = "uncommon";
+    case Foil = "foil";
+    case Rare = "rare";
+}
